skills section of german version modified

--- a/de.html
+++ b/de.html
@@ -237,7 +237,8 @@
             <ul class="text-center">
               <li><a href="#skills-machine-learning">Machine Learning</a></li>
               <li><a href="#skills-programming">Programmierung</a></li>
-              <li><a href="#skills-others">Tools und Umgebungen</a></li>
+              <li><a href="#skills-frameworks">Libraries und Frameworks</a></li>
+              <li><a href="#skills-tools">Tools und Umgebungen</a></li>
               <li><a href="#skills-languages">Sprachen</a></li>
             </ul>
 
@@ -245,125 +246,83 @@
             <div id="skills-machine-learning" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-ml-active-button">
-                      <a class="btn btn-general" id="btn-skill-ml-ml" role="button">Machine Learning</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-web" role="button">Web Crawling</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Mining und Analyse</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-optimization" role="button">Optimierung</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-ml-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Machine Learning</h4>
-                      <p class="text-justify">Ich mag künstliche Intelligenz sehr gern. Daher habe ich die verwandten Algorithmen studiert, um ein Meister in diesem Bereich zu werden. Computer Vision, Reinforcement Learning, GANs und Natural Language Processing sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, Studenten einige dieser Algorithmen beizubringen.</p>
-                      <ul class="text-left">
-                        <li><em>Sci-Kit Learn / Spark MLlib</em></li>
-                        <li><em>TensorFlow / PyTorch / Keras</em></li>
-                        <li><em>OpenCV</em></li>
-                        <li><em>NLTK / spaCy</em></li>
-                      </ul>
+                      <h6 class="text-center skills-item">Classical Machine Learning / Deep Learning</h6>
+                      <h6 class="text-center skills-item">Computer Vision</h6>
+                      <h6 class="text-center skills-item">Generetive Adversarial Networks</h6>
+                      <h6 class="text-center skills-item">Natural Language Processing (NLP)</h6>
+                      <h6 class="text-center skills-item">Reinforcement Learning</h6>
+                      <h6 class="text-center skills-item">DNN / CNN / RNN / LSTM / GRU</h6>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!--Skills Tabs Programming-->
             <div id="skills-programming" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-programming-active-button">
-                      <a class="btn btn-general" id="btn-skill-programming-lang" role="button">Programmiersprachen</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-gui" role="button">GUI Design</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-web" role="button">Webentwicklung</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Datenbank</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-programming-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Programmiersprachen</h4>
-                      <p class="text-justify">Ich kenne viele verschiedene Programmiersprachen für verschiedene Zwecke, von Coding für CLI- und GUI-Applications bis hin zum die GPU-Programmierung und Entwurf von Algorithmen für künstliche Intelligenz.</p>
-                      <ul class="text-left">
-                        <li><em>Python</em></li>
-                        <li><em>C / C++ / Cuda C / Embedded C</em></li>
-                        <li><em>JavaScript</em></li>
-                        <li><em>R</em></li>
-                        <li><em>MATLAB</em></li>
-                        <li><em>Assembly</em></li>
-                      </ul>
+                      <h6 class="text-center skills-item">Python</h6>
+                      <h6 class="text-center skills-item">C / C++ / Embedded C</h6>
+                      <h6 class="text-center skills-item">JavaScript</h6>
+                      <h6 class="text-center skills-item">R / Matlab</h6>
+                      <h6 class="text-center skills-item">SQL / MongoDB</h6>
+                      <h6 class="text-center skills-item">HTML / CSS</h6>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!--Skills Tabs Others-->
-            <div id="skills-others" class="skills-tab">
+            <div id="skills-frameworks" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-others-active-button">
-                      <a class="btn btn-general" id="btn-skill-others-git" role="button">DevOps Tools</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-comptia" role="button">Agile Softwareentwicklung</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-linux" role="button">Linux</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-aws" role="button">Amazon Web Services</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-others-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">DevOps Tools</h4>
-                      <p class="text-justify">Ich habe ein solides Verständnis von Git und wie es funktioniert. Eigentlich (wie es offensichtlich ist) habe ich meine Website auf GitHub gehostet. Ich bin auch ziemlich vertraut mit der Docker-Welt.</p>
-                      <ul class="text-left">
-                        <li><em>Git</em></li>
-                        <li><em>Docker</em></li>
-                      </ul>
+                      <h6 class="text-center skills-item">NumPy / Pandas</h6>
+                      <h6 class="text-center skills-item">Matplotlib / Seaborn / Plotly / ggplot</h6>
+                      <h6 class="text-center skills-item">TensorFlow / Keras / PyTorch</h6>
+                      <h6 class="text-center skills-item">Scikit-Learn / Spark MLlib</h6>
+                      <h6 class="text-center skills-item">OpenCV</h6>
+                      <h6 class="text-center skills-item">NLTK / spaCy</h6>
+                      <h6 class="text-center skills-item">PyQt / TKinter / Electron.js / React Native</h6>
+                      <h6 class="text-center skills-item">Flask</h6>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!--Skills Tabs Languages-->
+            <div id="skills-tools" class="skills-tab">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
+                    <div class="skill-information-inner">
+                      <h6 class="text-center skills-item">Big Data (Hadoop / Spark)</h6>
+                      <h6 class="text-center skills-item">MLOps and Pipeline (TFX / Airflow)</h6>
+                      <h6 class="text-center skills-item">Git / Docker</h6>
+                      <h6 class="text-center skills-item">Cloud (AWS)</h6>
+                      <h6 class="text-center skills-item">Linux</h6>
+                      <h6 class="text-center skills-item">GPGPU (CUDA)</h6>
+                      <h6 class="text-center skills-item">Tableau</h6>
+                      <h6 class="text-center skills-item">Agile (Scrum / Kanban / Jira)</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div id="skills-languages" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4">
-                    <div class="skill-button skill-languages-active-button">
-                      <a class="btn btn-general" id="btn-skill-languages-persian" role="button">Persisch</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-languages-english" role="button">Englisch</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-languages-german" role="button">Deutsch</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-languages-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Persisch</h4>
-                      <p class="text-justify">Persisch ist meine Muttersprache.</p>
-                      <ul class="text-left">
-                      </ul>
+                      <h6 class="text-center skills-item">Persian (Native)</h6>
+                      <h6 class="text-center skills-item">English (Pro)</h6>
+                      <h6 class="text-center skills-item">German (Pro)</h6>
                     </div>
                   </div>
                 </div>
@@ -412,10 +371,11 @@
                 <p class="edu-font"><b>Iranische Universität für Wissenschaft und Teschnologie</b></p>
                 <p class="edu-font"><i>September 2012 - September 2016</i></p>
                 <p>Note: 16.19 von 20</p>
-                <p>Thema der Diplomarbeit: Steuerung eines Überwachungssystems über das Internet <span class="education-med-screen"><br></span></p>
+                <p>Thema der Diplomarbeit: Steuerung eines Überwachungssystems über das Internet</span></p>
                 <p>Betreuer: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
+            
             <div class="col-md-6 text-center">
               <div class="education-container">
                 <i class="fas fa-user-graduate education-icon"></i>
@@ -424,7 +384,7 @@
                 <p class="edu-font"><b>Iranische Universität für Wissenschaft und Teschnologie</b></p>
                 <p class="edu-font"><i>September 2016 - Juli 2018</i></p>
                 <p>Note: 18.27 von 20</p>
-                <p>Thema der Masterarbeit: Emotionserkennung mit Convolutional Neural Networks</p>
+                <p>Thema der Masterarbeit: Emotionserkennung mit Convolutional Neural Networks (CNN)</p>
                 <p>Betreuer: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
