skilled section of english version modified

--- a/index.html
+++ b/index.html
@@ -232,9 +232,10 @@
         <div class="content-box-md">
           <div id="skills-tabs">
             <ul class="text-center">
-              <li><a href="#skills-machine-learning">Machine Learning</a></li>
+              <li><a href="#skills-machine-learning">AI Fields</a></li>
               <li><a href="#skills-programming">Programming</a></li>
-              <li><a href="#skills-others">Tools and Environments</a></li>
+              <li><a href="#skills-frameworks">Frameworks and Libraries</a></li>
+              <li><a href="#skills-tools">Tools and Environments</a></li>
               <li><a href="#skills-languages">Languages</a></li>
             </ul>
 
@@ -242,125 +243,83 @@
             <div id="skills-machine-learning" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-ml-active-button">
-                      <a class="btn btn-general" id="btn-skill-ml-ml" role="button">Machine Learning</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-web" role="button">Web Crawling</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-tableau" role="button">Data Mining and Analysis</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-ml-optimization" role="button">Optimization</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-ml-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Machine Learning</h4>
-                      <p class="text-justify">I am quite fond of artificial intelligence. Therefore, I have studied the related algorithms to become a master in this filed. Computer vision, reinforcement learning, GANs, and natural language processing are the main topics I studied about in the last few years. I also have the experience to teach some of these algorithms to students. </p>
-                      <ul class="text-left">
-                        <li><em>Sci-Kit Learn / Spark MLlib</em></li>
-                        <li><em>TensorFlow / PyTorch / Keras</em></li>
-                        <li><em>OpenCV</em></li>
-                        <li><em>NLTK / spaCy</em></li>
-                      </ul>
+                      <h6 class="text-center skills-item">Classical Machine Learning / Deep Learning</h6>
+                      <h6 class="text-center skills-item">Computer Vision</h6>
+                      <h6 class="text-center skills-item">Generetive Adversarial Networks</h6>
+                      <h6 class="text-center skills-item">Natural Language Processing (NLP)</h6>
+                      <h6 class="text-center skills-item">Reinforcement Learning</h6>
+                      <h6 class="text-center skills-item">DNN / CNN / RNN / LSTM / GRU</h6>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!--Skills Tabs Programming-->
             <div id="skills-programming" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-programming-active-button">
-                      <a class="btn btn-general" id="btn-skill-programming-lang" role="button">Languages</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-gui" role="button">GUI Design</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-web" role="button">Web Development</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-programming-db" role="button">Database</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-programming-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Programming Languages</h4>
-                      <p class="text-justify">I know a lot of different Programming Languages for different purposes, from writing code for CLI and GUI applications to GPU programming and designing artificial intelligence algorithms.</p>
-                      <ul class="text-left">
-                        <li><em>Python</em></li>
-                        <li><em>C / C++ / Cuda C / Embedded C</em></li>
-                        <li><em>JavaScript</em></li>
-                        <li><em>R</em></li>
-                        <li><em>MATLAB</em></li>
-                        <li><em>Assembly</em></li>
-                      </ul>
+                      <h6 class="text-center skills-item">Python</h6>
+                      <h6 class="text-center skills-item">C / C++ / Embedded C</h6>
+                      <h6 class="text-center skills-item">JavaScript</h6>
+                      <h6 class="text-center skills-item">R / Matlab</h6>
+                      <h6 class="text-center skills-item">SQL / MongoDB</h6>
+                      <h6 class="text-center skills-item">HTML / CSS</h6>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!--Skills Tabs Others-->
-            <div id="skills-others" class="skills-tab">
+            <div id="skills-frameworks" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-others-active-button">
-                      <a class="btn btn-general" id="btn-skill-others-git" role="button">DevOps Tools</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-comptia" role="button">Agile Software Development</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-linux" role="button">Linux</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-others-aws" role="button">Amazon Web Services</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-others-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">DevOps Tools</h4>
-                      <p class="text-justify">I have a solid understanding of Git and how it works. As a matter of facts (as it's obvious), I hosted my website on GitHub. I am also quite familiar with the Docker world.</p>
-                      <ul class="text-left">
-                        <li><em>Git</em></li>
-                        <li><em>Docker</em></li>
-                      </ul>
+                      <h6 class="text-center skills-item">NumPy / Pandas</h6>
+                      <h6 class="text-center skills-item">Matplotlib / Seaborn / Plotly / ggplot</h6>
+                      <h6 class="text-center skills-item">TensorFlow / Keras / PyTorch</h6>
+                      <h6 class="text-center skills-item">Scikit-Learn / Spark MLlib</h6>
+                      <h6 class="text-center skills-item">OpenCV</h6>
+                      <h6 class="text-center skills-item">NLTK / spaCy</h6>
+                      <h6 class="text-center skills-item">PyQt / TKinter / Electron.js / React Native</h6>
+                      <h6 class="text-center skills-item">Flask</h6>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!--Skills Tabs Languages-->
+            <div id="skills-tools" class="skills-tab">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
+                    <div class="skill-information-inner">
+                      <h6 class="text-center skills-item">Big Data (Hadoop / Spark)</h6>
+                      <h6 class="text-center skills-item">MLOps and Pipeline (TFX / Airflow)</h6>
+                      <h6 class="text-center skills-item">Git / Docker</h6>
+                      <h6 class="text-center skills-item">Cloud (AWS)</h6>
+                      <h6 class="text-center skills-item">Linux</h6>
+                      <h6 class="text-center skills-item">GPGPU (CUDA)</h6>
+                      <h6 class="text-center skills-item">Tableau</h6>
+                      <h6 class="text-center skills-item">Agile (Scrum / Kanban / Jira)</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div id="skills-languages" class="skills-tab">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-4">
-                    <div class="skill-button skill-languages-active-button">
-                      <a class="btn btn-general" id="btn-skill-languages-persian" role="button">Persian</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-languages-english" role="button">English</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-languages-german" role="button">German</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-languages-information">
+                  <div class="col-md-12 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Persian</h4>
-                      <p class="text-justify">Persian is my mother tongue.</p>
-                      <ul class="text-left">
-                      </ul>
+                      <h6 class="text-center skills-item">Persian (Native)</h6>
+                      <h6 class="text-center skills-item">English (Pro)</h6>
+                      <h6 class="text-center skills-item">German (Pro)</h6>
                     </div>
                   </div>
                 </div>
