--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 <h4>Electronics</h4>
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2012 - September 2016</i></p>
-                <p>GPA: 16.19 out of 20</p>
+                <p>GPA: 81</p>
                 <p>Thesis Topic: Controlling a Monitoring System with the help of Internet</p>
                 <p>Supervisor: Dr. Sattar Mirzakuchaki</p>
               </div>
@@ -379,8 +379,8 @@
                 <h4>Digital Electronics Systems</h4>
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2016 - July 2018</i></p>
-                <p>GPA: 18.27 out of 20</p>
-                <p>Thesis Topic: Emotion Recognition with Convolutional Neural Networks</p>
+                <p>GPA: 91</p>
+                <p>Thesis Topic: DPA-Resistant and Low Power Cryptography in IoT Devices</p>
                 <p>Supervisor: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
