--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               <div class="education-container">
                 <i class="fas fa-book-reader education-icon"></i>
                 <h3>Bachelor's Degree</h3>
-                <h4>Electronics</h4>
+                <h4>Electrical Engineering</h4>
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2012 - September 2016</i></p>
                 <p>GPA: 81</p>
@@ -376,7 +376,7 @@
               <div class="education-container">
                 <i class="fas fa-user-graduate education-icon"></i>
                 <h3>Master's Degree</h3>
-                <h4>Digital Electronics Systems</h4>
+                <h4>Electrical Engineering</h4>
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2016 - July 2018</i></p>
                 <p>GPA: 91</p>
