updating thesis topic of MSc

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2016 - July 2018</i></p>
                 <p>GPA: 91</p>
-                <p>Thesis Topic: DPA-Resistant and Low Power Cryptography in IoT Devices</p>
+                <p>Thesis Topic: Emotion Recognition with Convolutional Neural Networks</p>
                 <p>Supervisor: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
