--- a/de.html
+++ b/de.html
@@ -384,7 +384,7 @@
                 <p class="edu-font"><b>Iranische Universität für Wissenschaft und Teschnologie</b></p>
                 <p class="edu-font"><i>September 2016 - Juli 2018</i></p>
                 <p>Note: 18.27 von 20</p>
-                <p>Thema der Masterarbeit: Emotionserkennung mit Convolutional Neural Networks (CNN)</p>
+                <p>Thema der Masterarbeit: DPA-resistente Kryptographie mit geringem Stromverbrauch für IoT-Anwendungen</p>
                 <p>Betreuer: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
@@ -425,7 +425,7 @@
           <div class="row experience-item">
             <div class="col-md-5 text-right wow fadeInLeft" data-wow-duration="2s">
               <div class="experience-date">
-                <h3>Januar 2019 - Zurzeit</h3>
+                <h3>Januar 2019 - Dezember 2020</h3>
               </div>
             </div>
             <div class="col-md-2 experience-circle-holder">
