--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2016 - July 2018</i></p>
                 <p>GPA: 91</p>
-                <p>Thesis Topic: Emotion Recognition with Convolutional Neural Networks</p>
+                <p>Thesis Topic: Low Power DPA-Resistant Cryptography for IoT Applications</p>
                 <p>Supervisor: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
@@ -421,7 +421,7 @@
           <div class="row experience-item">
             <div class="col-md-5 text-right wow fadeInLeft" data-wow-duration="2s">
               <div class="experience-date">
-                <h3>January 2019 - Present</h3>
+                <h3>January 2019 - December 2020</h3>
               </div>
             </div>
             <div class="col-md-2 experience-circle-holder">
