german version updated

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
             <div class="col-md-3 text-center"></div>
 
-            <div class="col-md-6 text-center phd">
+            <div class="col-md-6 text-center">
               <div class="education-container">
                 <i class="fas fa-graduation-cap education-icon"></i>
                 <h3>PhD</h3>
