--- a/de.html
+++ b/de.html
@@ -337,7 +337,7 @@
                 <p class="edu-font"><b>Ghent Universität</b></p>
                 <p class="edu-font"><i>Noch nicht gestartet</i></p>
                 <p>Thema der Doktotrarbeit: AutoML</p>
-                <p>Doktorvater: Dr. Tom Dhaene</p>
+                <p>Doktorväter: <br> Dr. Tom Dhaene<br>Dr. Ivo Couckuyt</p>
               </div>
             </div>
 
