--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <p class="edu-font"><b>Ghent University</b></p>
                 <p class="edu-font"><i>Still not started</i></p>
                 <p>Thesis Topic: AutoML</p>
-                <p>Supervisor: Dr. Tom Dhaene</p>
+                <p>Supervisors: <br> Dr. Tom Dhaene<br>Dr. Ivo Couckuyt</p>
               </div>
             </div>
 
