finalizing the simplicity

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           
           <div id="home-heading">
             <h1 id="home-heading-name">Arash Heidari</h1> <br>
-            <h2 id="home-heading-title">I am an AI Researcher</h1>
+            <h2 id="home-heading-title">I am an <span>AI Researcher</span></h1>
           </div>
 
-          <div>
+          <div class="contacts">
               <a class="contact" href="mailto:arashheidari94@outlook.com">
                 <i class="fa-3x fas fa-envelope contact-icon"></i>
               </a>
