making it responsive

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <h1 id="home-heading-name">Arash Heidari</h1> <br>
             <h2 id="home-heading-title">I am an <span>AI Researcher</span></h1>
           </div>
+          <div class="getintouch">
+            <h5>Get in Touch</h5>
+          </div>
 
           <div class="contacts">
               <a class="contact" href="mailto:arashheidari94@outlook.com">
