--- a/index.html
+++ b/index.html
@@ -1,66 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta Tags -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet"> <!--Railway-->
-    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet"> <!--Marck Script-->
-    <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet"> <!--Parisienne-->
-    <link href="css/fontawesome.css" rel="stylesheet"> <!--fontawesome-->
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet"> <!--Courgette-->
-
-    <!-- CSS Links-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> <!--Bootstrap-->
-    <link type="text/css" rel="stylesheet" href="css/responsive-tabs.css"/>
-    <link rel="stylesheet" href="css/animate.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arash Heidari - AI Researcher</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
-    <!-- Title and Favicon-->
-    <title>Arash Heidari | Personal Website</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-  </head>
-
-  <body data-spy="scroll" data-target=".navbar" data-offset="100">
-    
-    <!--Home Page-->
-    <section id="home">
-      <img id="home-background" src="img/home-background.jpg"></img>
-      <div id="home-content" class="text-center">
-        <div id="home-content-inner">
-          
-          <div id="home-heading">
-            <h1 id="home-heading-name">Arash Heidari</h1> <br>
-            <h2 id="home-heading-title">I am an <span>AI Researcher</span></h1>
-          </div>
-          <div class="getintouch">
-            <h5>Get in Touch</h5>
-          </div>
-
-          <div class="contacts">
-              <a class="contact" href="mailto:arashheidari94@outlook.com">
-                <i class="fa-3x fas fa-envelope contact-icon"></i>
-              </a>
-              <a class="contact" href="https://www.linkedin.com/in/arashheidari">
-                <i class="fa-3x fab fa-linkedin-in contact-icon"></i>
-              </a>
-              <a class="contact" href="skype:live:.cid.7942a27b51066d91?chat">
-                <i class="fa-3x fab fa-skype contact-icon"></i>
-              </a>
-          </div>
-
+</head>
+<body>
+    <div class="page-wrapper">
+        <div class="content-container">
+            <header>
+                <h1>Arash Heidari</h1>
+                <p class="title">AI Researcher</p>
+            </header>
+            <main>
+                <section class="social-links">
+                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
+                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                        </svg>
+                    </a>
+                    <a href="https://scholar.google.com/citations?user=youruserid" target="_blank" rel="noopener noreferrer" aria-label="Google Scholar Profile">
+                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/>
+                        </svg>
+                    </a>
+                    <a href="mailto:youremail@example.com" aria-label="Email">
+                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6C22 4.9 21.1 4 20 4ZM20 8L12 13L4 8V6L12 11L20 6V8Z"/>
+                        </svg>
+                    </a>
+                </section>
+                <section class="cv-download">
+                    <a href="cv/Arash_Heidari_CV.pdf" download="Arash_Heidari_CV.pdf" class="text-link">Download CV</a>
+                </section>
+            </main>
         </div>
-
-      </div>
-    </section>
-
-    <!-- JS Links-->
-    <script src="js/jquery.js"></script> <!--Jquery-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> <!--Popper-->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> <!--Bootstrap-->
-    <script src="js/fontawesome.js"></script> <!--Fontawesome-->
-  </body>
+        <footer>
+            <p>&copy; <span id="currentYear"></span> Arash Heidari. All rights reserved.</p>
+        </footer>
+    </div>
+    <script src="js/script.js"></script>
+</body>
 </html>
