--- a/public-defense.html
+++ b/public-defense.html
@@ -49,10 +49,10 @@
             <!-- Registration Section -->
             <section class="registration-section standalone">
                 <div class="button-container">
-                    <a href="registration-page.html" class="register-button">Register to Attend</a>
+                    <a href="#" disabled=True class="register-button">Registration is Closed</a>
                     <a href="https://teams.microsoft.com/v2/?meetingjoin=true#/l/meetup-join/19:meeting_ZmQ4ZjgzMDQtN2VhYS00MGUzLTk3Y2YtNTA3MTQ5NTE0MjE0@thread.v2/0?context=%7b%22Tid%22%3a%22d7811cde-ecef-496c-8f91-a1786241b99c%22%2c%22Oid%22%3a%22d48f5073-28ee-42d0-8fe0-c43e5323d796%22%7d&anon=true&deeplinkId=7236433e-0afb-404c-bbfb-de90907b8325" class="livestream-button">Access Livestream</a>
                 </div>
-                <p class="registration-note">Registration is appreciated for in-person attendance.</p>
+                <p class="registration-note">Registration is closed. Please contact me for in-person registration.</p>
             </section>
 
             <div class="defense-main-grid">
